2006-05-09  Dave Brolley  <brolley@redhat.com>

	* utils-sim.scm (-gen-decode-insn-entry): Generated code should shift
	'entire_insn' not 'base_insn'.
	* sid-model.scm (-gen-model-class-decls): Handle the case where insn-timing
	is null.
	* sim.scm (-gen-arch-model-decls): Likewise.
	* sid-cpu.scm (-gen-scache-semantic-fn): Generate code to set
	abuf->written if profiling.
	(-gen-hw-stream-and-destream-fns): Use symbol->string instead of
	object->string om the mode.
	(-hw-gen-write-stack-decl): Likewise.
	* read.scm (include): Use arch-path as file location.
	(arch-path): Define it with a default setting.
	(-cgen): Update arch-path when "-a" option is specified.
	* utils.scm (dirname): New function.

2006-05-05  Steve Ellcey  <sje@cup.hp.com>

	* configure.in: Remove AC_ARG_PROGRAM.
	* configure: Regenerate with autoconf 2.59.

2006-03-14  Hans-Peter Nilsson  <hp@axis.com>

	* dev.scm (cload) <SID-SIMULATOR>: New case, duplicated from
	SIMULATOR.

2006-03-03 Shrirang Khisti <shrirangk@kpitcummins.com)

	* cpu/xc16x.opc (parse_hash): Return NULL if the input was parsed
	or an error message otherwise.
	(parse_dot, parse_pof, parse_pag, parse_sof, parse_seg): Likewise.
	Fix up comments to correctly describe the functions.

2006-02-17  Shrirang Khisti  <shrirangk@kpitcummins.com>
            Anil Paranjape   <anilp1@kpitcummins.com>
            Shilin Shakti    <shilins@kpitcummins.com>

	* cpu/xc16x.cpu: New file containing complete CGEN specific XC16X
	CPU description.
	* cpu/xc16x.opc: New file containing supporting XC16C routines.

2006-02-10  Nick Clifton  <nickc@redhat.com>

	* cpu/iq2000.opc (parse_hi16): Truncate shifted value to 16 bits.

2005-12-28  Nathan Sidwell  <nathan@codesourcery.com>

	* sid-cpu.scm (-gen-hw-stream-and-destream-fns): Stringize mode
	for concatenation.
	(-hw-gen-write-stack-decl): Likewise.

2005-12-05  Hans-Peter Nilsson  <hp@axis.com>

	* utils-sim.scm (-gen-decode-insn-entry): Correct last change for