@@ -1,3 +1,8 @@
+2006-05-10  Dave Brolley  <brolley@redhat.com>
+
+	* read.scm (-cgen): Add trailing "/" to arch-path.
+	* utils.scm (dirname): Removed. dirname is a primitive function.
+
 2006-05-09  Dave Brolley  <brolley@redhat.com>
 
 	* utils-sim.scm (-gen-decode-insn-entry): Generated code should shift
